--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 /*work sans font google fonts*/
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
 * {
     font-family: 'Work Sans', sans-serif;
 }
 
-.btn-parimary{
-    
+.btn-primary{
+    border-radius: 8px;
+    color: #fff;
+    font-size: 1.25rem;
+    background: #ff900e;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
 }
 
 /*header styles*/
+
 header{
     background: #FFF4E7;
     padding: 50px 240px;
@@ -38,6 +46,7 @@ nav li a{
     color: #424242;
 }
 /*banner styles*/
+
 .banner-content{
     max-width: 800px;
     text-align: center;
@@ -50,4 +59,59 @@ nav li a{
 }
 .banner-description{
     color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+/*responsive media query*/
+/*Mobile devices*/
+
+@media  screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+/*tablet or medium devices*/
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+/*main styles*/
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* team style */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5em;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+.teams-title .text-features{
+    color: #ff900e;
+    font-weight: 700;
 }
