--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*work sans font google fonts*/
 
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap");
-
+/* common shared */
 * {
   font-family: "Work Sans", sans-serif;
 }
@@ -17,6 +17,11 @@
   cursor: pointer;
   border: 0;
 }
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+  }
 
 /*header styles*/
 
@@ -28,11 +33,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.nav-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-  color: #131313;
 }
 nav > ul {
   display: flex;
