--- a/style.css
+++ b/style.css
@@ -116,6 +116,21 @@ main {
   margin-bottom: 10px;
 }
 
+/* sponsors styles*/
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+
 /*responsive media query*/
 /*Mobile devices*/
 
@@ -124,15 +139,18 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container {
+  .teams-container, .facts-card-container, .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content {
+  .teams-content, .facts-card-container{
     padding-left: 20px;
     padding-right: 20px;
+  }
+  .facts-card-container{
+    gap: 20px;
   }
 }
 /*tablet or medium devices*/
@@ -142,7 +160,8 @@ main {
     padding: 50px;
   }
   nav,
-  .teams-container {
+  .teams-container
+  .facts-card-container {
     flex-direction: column;
   }
 }
