--- a/style.css
+++ b/style.css
@@ -93,6 +93,33 @@ main {
   color: #ff900e;
   font-weight: 700;
 }
+/*features section styles*/
+.features {
+  margin: 130px;
+  display: flex;
+  gap: 100px;
+}
+.features .section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+.feature-content .card {
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.ten-years-badge {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 342px;
+  padding: 40px;
+}
+.ten-years-badge h3 {
+  font-size: 4rem;
+}
 /*facts section*/
 .facts-card-container {
   display: flex;
@@ -117,18 +144,18 @@ main {
 }
 
 /* sponsors styles*/
-.sponsors{
-    text-align: center;
+.sponsors {
+  text-align: center;
 }
-.sponsors-img-container{
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 40px;
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
 }
-.sponsors-img-container img{
-    width: 165px;
+.sponsors-img-container img {
+  width: 165px;
 }
 
 /*responsive media query*/
@@ -139,17 +166,20 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container, .facts-card-container, .sponsors-img-container {
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content, .facts-card-container{
+  .teams-content,
+  .facts-card-container {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .facts-card-container{
+  .facts-card-container {
     gap: 20px;
   }
 }
@@ -160,8 +190,7 @@ main {
     padding: 50px;
   }
   nav,
-  .teams-container
-  .facts-card-container {
+  .teams-container .facts-card-container {
     flex-direction: column;
   }
 }
