--- a/style.css
+++ b/style.css
@@ -110,15 +110,26 @@ main {
   background: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
+.feature-img img{
+    height: 90%;
+    margin-left: 90px;
+}
 .ten-years-badge {
   border-radius: 8px;
   background: #ff900e;
   color: #fff;
-  width: 342px;
+  width: 340px;
   padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
 }
 .ten-years-badge h3 {
   font-size: 4rem;
+  margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
 }
 /*facts section*/
 .facts-card-container {
@@ -166,10 +177,18 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container,
+  .teams-container, .features,
   .facts-card-container,
   .sponsors-img-container {
     flex-direction: column;
+  }
+  .feature-img img{
+    width: 90%;
+    margin-left: 0;
+  }
+  .ten-years-badge{
+    position: static;
+    max-width: 300px;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
